--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "celebrate": "^15.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8"
   }
 }
