--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "celebrate": "^15.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-winston": "^4.2.0",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.3.8"
+    "mongoose": "^6.3.8",
+    "winston": "^3.7.2"
   }
 }
