--- a/package.json
+++ b/package.json
@@ -29,9 +29,12 @@
     "celebrate": "^15.0.1",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-rate-limit": "^6.4.0",
     "express-winston": "^4.2.0",
+    "helmet": "^5.1.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.8",
+    "validator": "^13.7.0",
     "winston": "^3.7.2"
   }
 }
